Fix large gaps below every post in list

--- a/sass/tale/_catalogue.scss
+++ b/sass/tale/_catalogue.scss
@@ -13,6 +13,9 @@
     &:last-child {
       border: 0;
     }
+    > div > :last-child {
+      margin-bottom: 0;
+    }
   }
 
   &-pinned {
